Bug 1335854 - Tone down non-zero refcount message for dynamic atoms. r=froydnj

--HG--
extra : rebase_source : 31bef82b308fc5f7bd4eebbf898820e0b10640c0